# training-data-tools-anima-lora

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/skills/replace-training-image/: SKILL.md
.codex/skills/replace-training-image/agents/: openai.yaml
.codex/skills/tag-sorter/: SKILL.md
.codex/skills/tag-sorter/agents/: openai.yaml
.codex/skills/tag-sorter/references/: tag-priority.md
.codex/skills/tag-sorter/scripts/: sort_tags.py
anima-train/: 1_convert_image.py  1_image_split.py  2_tag_with_doubao.py  2_tag_with_joytag.py  2_tagging_with_wd14.py  3_caption_review_gui.py  4_package_dataset.py  AUTODL_TRAINING.md  dataset_config.toml  dataset_sources.py  image_naming.py  source_map.py  train_anima_lora_4090.sh  windows_ui.py
